# TodoApp

./: .gitignore  README.md  database.db  pyproject.toml  run.py
backend/: database.py  main.py
backend/routes/: todos.py  users.py
frontend/: api.py  app.py  login.py
