[project]
name = "todoapp"
version = "0.1.0"
description = "Todo App with online connection"
authors = [
    {name = "Luxas-dev",email = "lucashagen05@gmail.com"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyside6 (>=6.11.0,<7.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
